<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_500"
    android:fitsSystemWindows="true"
    tools:context=".ui.detail.DetailActivity">

    <View
        android:id="@+id/placeholderView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbarLayout"
            style="@style/Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/collapsingToolbarLayoutLargeSize"
            app:collapsedTitleGravity="center"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="center"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            tools:title="this is game's title">

            <ImageView
                android:id="@+id/bg_game"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:tintMode="src_atop"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"
                app:tint="@color/black_500_translucent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/materialToolbar"
                style="@style/AppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:elevation="0dp"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:titleCentered="true" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:paddingHorizontal="24dp"
        android:paddingVertical="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detailScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ratingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/rating"
                android:textSize="24sp"
                app:fontFamily="sans-serif-black"
                app:layout_constraintEnd_toStartOf="@+id/addedTitle"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_rating"
                android:drawablePadding="4dp"
                app:drawableTint="@color/gray"
                app:layout_constraintStart_toStartOf="@id/ratingTitle"
                app:layout_constraintTop_toBottomOf="@id/ratingTitle"
                tools:text="5.0" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/ratingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/rating"
                app:layout_constraintTop_toBottomOf="@id/rating"
                tools:text="@string/rating_count" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/addedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/added"
                android:textSize="24sp"
                app:fontFamily="sans-serif-black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ratingTitle"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/added"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/icon_added"
                android:drawablePadding="4dp"
                app:drawableTint="@color/gray"
                app:layout_constraintStart_toStartOf="@id/addedTitle"
                app:layout_constraintTop_toBottomOf="@id/addedTitle"
                tools:text="1000" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/descTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/about"
                android:textSize="24sp"
                app:fontFamily="sans-serif-black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingCount" />

            <com.ms.square.android.expandabletextview.ExpandableTextView xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@id/descTitle"
                app:layout_constraintTop_toBottomOf="@id/descTitle"
                expandableTextView:animDuration="200"
                expandableTextView:maxCollapsedLines="4">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:background="@android:color/transparent"
                    android:padding="16dp" />

            </com.ms.square.android.expandabletextview.ExpandableTextView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/desc">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/platformsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/platforms"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/platforms"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/platforms"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toStartOf="@+id/genres"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/platformsTitle"
                    tools:text="platforms, platforms" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/genresTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genres"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@+id/genres"
                    app:layout_constraintTop_toTopOf="@id/platformsTitle" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/genres"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/platforms"
                    app:layout_constraintTop_toBottomOf="@id/genresTitle"
                    tools:text="genres, genres" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/developersTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/developers"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/platforms"
                    app:layout_constraintTop_toBottomOf="@id/platforms" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/developers"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="@id/developersTitle"
                    app:layout_constraintTop_toBottomOf="@id/developersTitle"
                    tools:text="developers, developers" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/publishersTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/publishers"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/genres"
                    app:layout_constraintTop_toBottomOf="@id/genres" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/publishers"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="@id/publishersTitle"
                    app:layout_constraintTop_toBottomOf="@id/publishersTitle"
                    tools:text="publishers, publishers" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/releasedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/released"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/developers"
                    app:layout_constraintTop_toBottomOf="@id/developers" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/released"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    app:layout_constraintStart_toStartOf="@id/releasedTitle"
                    app:layout_constraintTop_toBottomOf="@id/releasedTitle"
                    tools:text="released" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/webTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/website"
                    android:textColor="@color/gray"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="@id/publishers"
                    app:layout_constraintTop_toBottomOf="@id/publishers" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/web"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:textColorLink="@color/white"
                    app:layout_constraintStart_toStartOf="@id/webTitle"
                    app:layout_constraintTop_toBottomOf="@id/webTitle"
                    tools:text="website" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/screenshotTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/screenshots"
                android:textSize="24sp"
                app:fontFamily="sans-serif-black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutInfo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/screenshotRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/screenshotTitle"
                tools:itemCount="10"
                tools:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                tools:listitem="@layout/item_list_screenshot"
                tools:orientation="horizontal"
                tools:scrollbars="horizontal" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/sourceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/data_source"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/screenshotRecycler" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/source"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/https_rawg_io"
                android:textColorLink="@color/white"
                app:layout_constraintStart_toStartOf="@id/sourceTitle"
                app:layout_constraintTop_toBottomOf="@id/sourceTitle" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab_cam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        android:textColor="@color/white"
        app:backgroundTint="@color/black_200"
        app:fabSize="auto"
        app:icon="@drawable/icon_favorites_border"
        app:iconTint="@color/white"
        app:layout_anchor="@id/placeholderView"
        app:layout_anchorGravity="bottom|end" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>